--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <title>Find a Verse (CSS-Only)</title>
     <style>
         /* --- COLOUR CHANGES START HERE --- */
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            padding: 20px;
-            background-color: #f0f4f8; /* Light blue-grey page background */
-            color: #333; /* Darker text for readability */
-        }
+        body body {
+    font-family: 'Poppins', sans-serif;
+    /* ... other styles ... */
+}
         .header-image {
             width: 100%;
             max-width: 600px;
@@ -129,3 +126,4 @@
 
 </body>
 </html>
+
