--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -350,4 +351,10 @@
         <p>But those who hope in the Lord will renew their strength. They will soar on wings like eagles; they will run and not grow weary, they will walk and not be faint. - Isaiah 40:31 &#10013;</p>
     </div>
     <div id="confused-verse" class="verse-container">
-        <p>For God is not a God of confusion but of peace. - 1 Corinthians 14:33 &#100
+        <p>For God is not a God of confusion but of peace. - 1 Corinthians 14:33 &#10013;</p>
+    </div>
+    <div id="content-verse" class="verse-container">
+        <p>I know what it is to be in need, and I know what it is to have plenty. I have learned the secret of being content in any and every situation. - Philippians 4:12 &#10013;</p>
+    </div>
+    <div id="hurt-verse" class="verse-container">
+        <p>
