--- a/index.html
+++ b/index.html
@@ -326,3 +326,53 @@
         <a href="#confused-verse" class="confused-link">Confused</a>
         <a href="#content-verse" class="content-link">Content</a>
         <a href="#hurt-verse" class="hurt-link">Hurt</a>
+    </div>
+
+    <div id="anxious-verse" class="verse-container">
+        <p>Do not be anxious about anything, but in every situation, by prayer and petition, with thanksgiving, present your requests to God. - Philippians 4:6 &#10013;</p>
+    </div>
+    <div id="sad-verse" class="verse-container">
+        <p>The Lord is close to the brokenhearted and saves those who are crushed in spirit. - Psalm 34:18 &#10013;</p>
+    </div>
+    <div id="grateful-verse" class="verse-container">
+        <p>Give thanks to the Lord, for he is good; his love endures forever. - Psalm 107:1 &#10013;</p>
+    </div>
+    <div id="stressed-verse" class="verse-container">
+        <p>Come to me, all you who are weary and burdened, and I will give you rest. - Matthew 11:28 &#10013;</p>
+    </div>
+    <div id="peaceful-verse" class="verse-container">
+        <p>I have told you these things, so that in me you may have peace. In this world you will have trouble. But take heart! I have overcome the world. - John 16:33 &#10013;</p>
+    </div>
+    <div id="lonely-verse" class="verse-container">
+        <p>The Lord is on my side; I will not fear. What can man do to me? - Psalm 118:6 &#10013;</p>
+    </div>
+    <div id="angry-verse" class="verse-container">
+        <p>A gentle answer turns away wrath, but a harsh word stirs up anger. - Proverbs 15:1 &#10013;</p>
+    </div>
+    <div id="hopeful-verse" class="verse-container">
+        <p>For I know the plans I have for you,” declares the Lord, “plans to prosper you and not to harm you, plans to give you hope and a future. - Jeremiah 29:11 &#10013;</p>
+    </div>
+    <div id="guilty-verse" class="verse-container">
+        <p>If we confess our sins, he is faithful and just and will forgive us our sins and purify us from all unrighteousness. - 1 John 1:9 &#10013;</p>
+    </div>
+    <div id="fearful-verse" class="verse-container">
+        <p>Do not be afraid or discouraged, for the Lord your God will be with you wherever you go. - Joshua 1:9 &#10013;</p>
+    </div>
+    <div id="joyful-verse" class="verse-container">
+        <p>Rejoice in the Lord always. I will say it again: Rejoice! - Philippians 4:4 &#10013;</p>
+    </div>
+    <div id="tired-verse" class="verse-container">
+        <p>But those who hope in the Lord will renew their strength. They will soar on wings like eagles; they will run and not grow weary, they will walk and not be faint. - Isaiah 40:31 &#10013;</p>
+    </div>
+    <div id="confused-verse" class="verse-container">
+        <p>For God is not a God of confusion but of peace. - 1 Corinthians 14:33 &#10013;</p>
+    </div>
+    <div id="content-verse" class="verse-container">
+        <p>I know what it is to be in need, and I know what it is to have plenty. I have learned the secret of being content in any and every situation. - Philippians 4:12 &#10013;</p>
+    </div>
+    <div id="hurt-verse" class="verse-container">
+        <p>He heals the brokenhearted and binds up their wounds. - Psalm 147:3 &#10013;</p>
+    </div>
+
+</body>
+</html>
