--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
             margin-top: 30px;
         }
 
+        h2 {
+            color: var(--header-color);
+            text-align: center;
+            margin-top: 20px;
+        }
+
         p {
             text-align: center;
             max-width: 700px;
@@ -309,6 +315,10 @@
     
     <p>How are you feeling today? Click an emotion to find a comforting verse.</p>
 
+    <h2>What is This?</h2>
+    <p>This website is a simple tool to help you find a Bible verse for how you are feeling. The Bible is a source of comfort and guidance, and this page can help you find a verse that speaks to your heart.</p>
+    <hr>
+    
     <div class="emotion-links">
         <a href="#anxious-verse" class="anxious-link">Anxious</a>
         <a href="#sad-verse" class="sad-link">Sad</a>
